--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -150,24 +150,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AssimpModel.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Base\AssimpModel.cpp" />
+    <ClCompile Include="Base\Camera.cpp" />
+    <ClCompile Include="Base\Light.cpp" />
+    <ClCompile Include="Base\Mesh.cpp" />
+    <ClCompile Include="Base\Model.cpp" />
+    <ClCompile Include="Base\Polygon.cpp" />
+    <ClCompile Include="Base\Shader.cpp" />
+    <ClCompile Include="Base\Texture.cpp" />
+    <ClCompile Include="Core\Object2D.cpp" />
+    <ClCompile Include="Core\ObjectBase.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="Polygon.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Test2DObj.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AssimpModel.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="Light.h" />
+    <ClInclude Include="Base\AssimpModel.h" />
+    <ClInclude Include="Base\Camera.h" />
+    <ClInclude Include="Base\Light.h" />
+    <ClInclude Include="Base\Model.h" />
+    <ClInclude Include="Base\Polygon.h" />
+    <ClInclude Include="Base\Shader.h" />
+    <ClInclude Include="Base\Texture.h" />
+    <ClInclude Include="Core\Object2D.h" />
+    <ClInclude Include="Core\ObjectBase.h" />
     <ClInclude Include="main.h" />
-    <ClInclude Include="Mesh.h" />
-    <ClInclude Include="Polygon.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Test2DObj.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Asset\Shader\AssimpPixel.hlsl">
