--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -158,10 +158,16 @@
     <ClCompile Include="Base\Polygon.cpp" />
     <ClCompile Include="Base\Shader.cpp" />
     <ClCompile Include="Base\Texture.cpp" />
+    <ClCompile Include="Core\Fade.cpp" />
+    <ClCompile Include="Core\GameObj.cpp" />
     <ClCompile Include="Core\Object2D.cpp" />
     <ClCompile Include="Core\ObjectBase.cpp" />
+    <ClCompile Include="Core\Scene.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Scene\Game.cpp" />
+    <ClCompile Include="Scene\Title.cpp" />
     <ClCompile Include="Test2DObj.cpp" />
+    <ClCompile Include="Test3D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base\AssimpModel.h" />
@@ -171,10 +177,17 @@
     <ClInclude Include="Base\Polygon.h" />
     <ClInclude Include="Base\Shader.h" />
     <ClInclude Include="Base\Texture.h" />
+    <ClInclude Include="Core\Fade.h" />
+    <ClInclude Include="Core\GameObj.h" />
     <ClInclude Include="Core\Object2D.h" />
     <ClInclude Include="Core\ObjectBase.h" />
+    <ClInclude Include="Core\Scene.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="Scene\Game.h" />
+    <ClInclude Include="Scene\Title.h" />
     <ClInclude Include="Test2DObj.h" />
+    <ClInclude Include="Test3D.h" />
+    <ClInclude Include="TestCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Asset\Shader\AssimpPixel.hlsl">
