--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="Base\AssimpModel.h" />
     <ClInclude Include="Base\Camera.h" />
     <ClInclude Include="Base\Light.h" />
+    <ClInclude Include="Base\Mesh.h" />
     <ClInclude Include="Base\Model.h" />
     <ClInclude Include="Base\Polygon.h" />
     <ClInclude Include="Base\Shader.h" />
