--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -161,7 +161,13 @@
     <ClCompile Include="Core\Object2D.cpp" />
     <ClCompile Include="Core\Object3D.cpp" />
     <ClCompile Include="Core\ObjectBase.cpp" />
+    <ClCompile Include="Core\SceneBase.cpp" />
+    <ClCompile Include="Core\ScreenObjectBase.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Manager\ObjectManager.cpp" />
+    <ClCompile Include="Manager\SceneManager.cpp" />
+    <ClCompile Include="Object\SceneFade.cpp" />
+    <ClCompile Include="Scene\TestScene.cpp" />
     <ClCompile Include="Test2DObj.cpp" />
     <ClCompile Include="Test3D.cpp" />
   </ItemGroup>
@@ -177,7 +183,14 @@
     <ClInclude Include="Core\Object2D.h" />
     <ClInclude Include="Core\Object3D.h" />
     <ClInclude Include="Core\ObjectBase.h" />
+    <ClInclude Include="Core\SceneBase.h" />
+    <ClInclude Include="Core\SceneData.h" />
+    <ClInclude Include="Core\ScereenObjectBase.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="Manager\ObjectManager.h" />
+    <ClInclude Include="Manager\SceneManager.h" />
+    <ClInclude Include="Object\SceneFade.h" />
+    <ClInclude Include="Scene\TestScene.h" />
     <ClInclude Include="Test2DObj.h" />
     <ClInclude Include="Test3D.h" />
   </ItemGroup>
