Create:UI, BUG:2DOBJ

--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -165,20 +165,27 @@
     <ClCompile Include="Core\Object2D.cpp" />
     <ClCompile Include="Core\Object3D.cpp" />
     <ClCompile Include="Core\ObjectBase.cpp" />
+    <ClCompile Include="Core\ObjectUI.cpp" />
     <ClCompile Include="Core\SceneBase.cpp" />
     <ClCompile Include="Core\ScreenObjectBase.cpp" />
     <ClCompile Include="Core\ShaderList.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager\ObjectManager.cpp" />
     <ClCompile Include="Manager\SceneManager.cpp" />
+    <ClCompile Include="Object\Charactor.cpp" />
+    <ClCompile Include="Object\Land.cpp" />
     <ClCompile Include="Object\SceneFade.cpp" />
     <ClCompile Include="Object\SkyBox.cpp" />
+    <ClCompile Include="Object\Title\Sword.cpp" />
     <ClCompile Include="Scene\CollisionScene.cpp" />
     <ClCompile Include="Scene\TestScene.cpp" />
+    <ClCompile Include="Scene\Title.cpp" />
     <ClCompile Include="Test2DObj.cpp" />
     <ClCompile Include="Test3D.cpp" />
+    <ClCompile Include="TestBillBoard.cpp" />
     <ClCompile Include="TestCamera.cpp" />
     <ClCompile Include="TestCollision.cpp" />
+    <ClCompile Include="TestPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base\AssimpModel.h" />
@@ -195,6 +202,7 @@
     <ClInclude Include="Core\Object2D.h" />
     <ClInclude Include="Core\Object3D.h" />
     <ClInclude Include="Core\ObjectBase.h" />
+    <ClInclude Include="Core\ObjectUI.h" />
     <ClInclude Include="Core\SceneBase.h" />
     <ClInclude Include="Core\SceneData.h" />
     <ClInclude Include="Core\ScereenObjectBase.h" />
@@ -202,14 +210,20 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="Manager\ObjectManager.h" />
     <ClInclude Include="Manager\SceneManager.h" />
+    <ClInclude Include="Object\Charactor.h" />
+    <ClInclude Include="Object\Land.h" />
     <ClInclude Include="Object\SceneFade.h" />
     <ClInclude Include="Object\SkyBox.h" />
+    <ClInclude Include="Object\Title\Sword.h" />
     <ClInclude Include="Scene\CollisionScene.h" />
     <ClInclude Include="Scene\TestScene.h" />
+    <ClInclude Include="Scene\Title.h" />
     <ClInclude Include="Test2DObj.h" />
     <ClInclude Include="Test3D.h" />
+    <ClInclude Include="TestBillBoard.h" />
     <ClInclude Include="TestCamera.h" />
     <ClInclude Include="TestCollision.h" />
+    <ClInclude Include="TestPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Asset\Shader\AssimpPixel.hlsl">
@@ -239,6 +253,14 @@
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)data\shader\%(Filename).cso</ObjectFileOutput>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)data\shader\%(Filename).cso</ObjectFileOutput>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)data\shader\%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
+    <FxCompile Include="..\Asset\Shader\BillboardPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)data\shader\%(Filename).cso</ObjectFileOutput>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="..\Asset\Shader\Pixel.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
