--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="Base\Polygon.h" />
     <ClInclude Include="Base\Shader.h" />
     <ClInclude Include="Base\Texture.h" />
+    <ClInclude Include="Core\AnimData.h" />
     <ClInclude Include="Core\Debug\Box.h" />
     <ClInclude Include="Core\Debug\Debug_Collision.h" />
     <ClInclude Include="Core\Object2D.h" />
