--- a/DX11Game/DX11Game.vcxproj
+++ b/DX11Game/DX11Game.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="TestBillBoard.cpp" />
     <ClCompile Include="TestCamera.cpp" />
     <ClCompile Include="TestCollision.cpp" />
+    <ClCompile Include="TestEnemy.cpp" />
     <ClCompile Include="TestPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -231,6 +232,7 @@
     <ClInclude Include="TestBillBoard.h" />
     <ClInclude Include="TestCamera.h" />
     <ClInclude Include="TestCollision.h" />
+    <ClInclude Include="TestEnemy.h" />
     <ClInclude Include="TestPlayer.h" />
   </ItemGroup>
   <ItemGroup>
